# CMake-Best-Practices---2nd-Edition

./: .clang-format  .clang-tidy  .cmake-format.json  .gitmodules  CMakeLists.txt  CMakePresets.json  requirements.txt
.github/toolchain/: clang-on-windows-toolchain.cmake
.github/workflows/: ci.yml  coverage.yml  cross-compiling.yml  sanitizers.yml  superbuild.yml
chapter01/: CMakeLists.txt
chapter01/policy_example/: CMakeLists.txt
chapter01/simple_executable/: CMakeLists.txt
chapter02/: CMakeLists.txt
chapter02/component1/: CMakeLists.txt
chapter02/component2/: CMakeLists.txt
chapter02/component_interface/: CMakeLists.txt
chapter02/driver_app/: CMakeLists.txt
chapter02/simple_example/: CMakeLists.txt
chapter03/: CMakeLists.txt
chapter03/hello_header_only/: CMakeLists.txt
chapter03/hello_object_lib/: CMakeLists.txt
chapter03/hello_shared_lib/: CMakeLists.txt
chapter03/hello_simple_library_example/: CMakeLists.txt
chapter03/hello_static_lib/: CMakeLists.txt
chapter03/hello_world_standalone/: CMakeLists.txt
chapter03/src/: main.cpp
chapter04/: CMakeLists.txt
chapter04/ex01_executable/: CMakeLists.txt
chapter04/ex02_static/: CMakeLists.txt
chapter04/ex03_file/: CMakeLists.txt
chapter04/ex04_directory/: CMakeLists.txt
chapter04/ex05_config_file_package/: CMakeLists.txt
chapter04/ex05_consumer/: CMakeLists.txt
chapter04/ex06_pack/: CMakeLists.txt
chapter04/ex07_pack_nsis_standalone/: CMakeLists.txt
chapter05/: CMakeLists.txt
chapter05/conan_example/: CMakeLists.txt
chapter05/external_project/: CMakeLists.txt
chapter05/fetch_content_example/: CMakeLists.txt
chapter05/find_module/: CMakeLists.txt
chapter05/find_package_example/: CMakeLists.txt
chapter05/vcpkg_example/: CMakeLists.txt
chapter06/: CMakeLists.txt
chapter06/ex01_doxdocgen/: CMakeLists.txt
chapter06/ex02_doxplantuml/: CMakeLists.txt
chapter07/clang_tidy_example/: CMakeLists.txt
chapter07/coverage_example/: CMakeLists.txt
chapter07/cppcheck_example/: CMakeLists.txt
chapter07/cpplint_example/: CMakeLists.txt
chapter07/custom_build_type/: CMakeLists.txt
chapter07/fixture_example/: CMakeLists.txt
chapter07/iwyu_example/: CMakeLists.txt
chapter07/lwyu_example/: CMakeLists.txt
chapter07/pass_fail_criteria/: CMakeLists.txt
chapter07/resource_group_example/: CMakeLists.txt
chapter07/simple_sanitizer_example/: CMakeLists.txt
chapter07/simple_test/: CMakeLists.txt
chapter07/test_discovery_example/: CMakeLists.txt
chapter07/test_labels/: CMakeLists.txt
chapter07/timeout_example/: CMakeLists.txt
chapter08/chaining_custom_commands_example/: CMakeLists.txt
chapter08/configure_file_example/: CMakeLists.txt
chapter08/create_source_file_example/: CMakeLists.txt
chapter08/custom_command_example/: CMakeLists.txt
chapter08/custom_target_dependency_example/: CMakeLists.txt
chapter08/custom_target_example/: CMakeLists.txt
chapter08/execute_process_example/: CMakeLists.txt
chapter09/docker_minimal/: CMakeLists.txt
chapter10/: CMakeLists.txt
chapter10/ex01_external_deps/: CMakeLists.txt  superbuild.cmake
chapter10/ex02_external_deps_with_extproject/: CMakeLists.txt  superbuild.cmake
chapter10/ex03_simple_qt_app/: CMakeLists.txt  main.cpp  superbuild.cmake
chapter12/: CMakeLists.txt
chapter13/: CMakeLists.txt
chapter14/: CMakeLists.txt
(+100 files in other folders)
